--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
        
     </style>
 
-        <title>Portfolio website complete</title>
+        <title> Jaydip Jadhav</title>
     </head>
     <body>
         <!--===== HEADER =====-->
