--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@
                             <p><strong>Challenges & Solutions:</strong> Managed asynchronous data fetching using React hooks and optimized API calls for better performance. Successfully deployed the application on Vercel, ensuring fast load times and reliable uptime.</p>
                         </div>
                         
-                    <!-- </a>
-                    <a href="" class="work__img">
+                    </a>
+                    <!-- <a href="" class="work__img">
                         <img src="assets/img/work5.jpg" alt="">
                     </a>
                     <a href="" class="work__img">
                         <img src="assets/img/work6.jpg" alt="">
-                    </a> -->
+                    </a>  -->
                 </div>
             </section>
 
